--- a/C_Sharp_Beginners/C_Sharp_Beginners/C_Sharp_Beginners.csproj
+++ b/C_Sharp_Beginners/C_Sharp_Beginners/C_Sharp_Beginners.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Class2.cs" />
     <Compile Include="Class20.cs" />
     <Compile Include="Class21.cs" />
+    <Compile Include="Class22.cs" />
     <Compile Include="Class3.cs" />
     <Compile Include="Class4.cs" />
     <Compile Include="Class5.cs" />
@@ -63,6 +64,8 @@
     <Compile Include="Class7.cs" />
     <Compile Include="Class8.cs" />
     <Compile Include="Class9.cs" />
+    <Compile Include="Custom Exception\Class23.cs" />
+    <Compile Include="Custom Exception\Class24.cs" />
     <Compile Include="NameSpaces\Program.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
